--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
-target/
+gitarget/
 .mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+.mvn/*
+target/*
+mvnw
+mvnw.cmd
 
 ### STS ###
 .apt_generated
